# mesmerizing-simulations

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/inipp/include/inipp/: inipp.h
lib/portable-file-dialogs/include/portable-file-dialogs/: portable-file-dialogs.h
presets/: bigbang.ini  bits.ini  coolchaos.ini  default.ini  maze-generator.ini  shockwave.ini  slimefibers.ini  supernova.ini
res/: agent.glsl  compute.glsl  diffuse.glsl  draw.frag  draw.vert  evaporate.glsl  reset.glsl
src/: Agent.h  ImguiStyle.h  Loader.cpp  Loader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
